support private docker registry
