# api/src/generated/restapi/operations/repository/get_remote_images_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package repository
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/rescale-labs/scaleshift/api/src/generated/models"
+)
+
+// GetRemoteImagesOKCode is the HTTP code returned for type GetRemoteImagesOK
+const GetRemoteImagesOKCode int = 200
+
+/*GetRemoteImagesOK OK
+
+swagger:response getRemoteImagesOK
+*/
+type GetRemoteImagesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Image `json:"body,omitempty"`
+}
+
+// NewGetRemoteImagesOK creates GetRemoteImagesOK with default headers values
+func NewGetRemoteImagesOK() *GetRemoteImagesOK {
+
+	return &GetRemoteImagesOK{}
+}
+
+// WithPayload adds the payload to the get remote images o k response
+func (o *GetRemoteImagesOK) WithPayload(payload []*models.Image) *GetRemoteImagesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get remote images o k response
+func (o *GetRemoteImagesOK) SetPayload(payload []*models.Image) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRemoteImagesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make([]*models.Image, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*GetRemoteImagesDefault Unexpected error
+
+swagger:response getRemoteImagesDefault
+*/
+type GetRemoteImagesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetRemoteImagesDefault creates GetRemoteImagesDefault with default headers values
+func NewGetRemoteImagesDefault(code int) *GetRemoteImagesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetRemoteImagesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get remote images default response
+func (o *GetRemoteImagesDefault) WithStatusCode(code int) *GetRemoteImagesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get remote images default response
+func (o *GetRemoteImagesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get remote images default response
+func (o *GetRemoteImagesDefault) WithPayload(payload *models.Error) *GetRemoteImagesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get remote images default response
+func (o *GetRemoteImagesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRemoteImagesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
