# api/src/generated/restapi/operations/repository/get_remote_repositories_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package repository
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/rescale-labs/scaleshift/api/src/generated/models"
+)
+
+// GetRemoteRepositoriesOKCode is the HTTP code returned for type GetRemoteRepositoriesOK
+const GetRemoteRepositoriesOKCode int = 200
+
+/*GetRemoteRepositoriesOK OK
+
+swagger:response getRemoteRepositoriesOK
+*/
+type GetRemoteRepositoriesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.Repository `json:"body,omitempty"`
+}
+
+// NewGetRemoteRepositoriesOK creates GetRemoteRepositoriesOK with default headers values
+func NewGetRemoteRepositoriesOK() *GetRemoteRepositoriesOK {
+
+	return &GetRemoteRepositoriesOK{}
+}
+
+// WithPayload adds the payload to the get remote repositories o k response
+func (o *GetRemoteRepositoriesOK) WithPayload(payload []*models.Repository) *GetRemoteRepositoriesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get remote repositories o k response
+func (o *GetRemoteRepositoriesOK) SetPayload(payload []*models.Repository) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRemoteRepositoriesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make([]*models.Repository, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*GetRemoteRepositoriesDefault Unexpected error
+
+swagger:response getRemoteRepositoriesDefault
+*/
+type GetRemoteRepositoriesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetRemoteRepositoriesDefault creates GetRemoteRepositoriesDefault with default headers values
+func NewGetRemoteRepositoriesDefault(code int) *GetRemoteRepositoriesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetRemoteRepositoriesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get remote repositories default response
+func (o *GetRemoteRepositoriesDefault) WithStatusCode(code int) *GetRemoteRepositoriesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get remote repositories default response
+func (o *GetRemoteRepositoriesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get remote repositories default response
+func (o *GetRemoteRepositoriesDefault) WithPayload(payload *models.Error) *GetRemoteRepositoriesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get remote repositories default response
+func (o *GetRemoteRepositoriesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRemoteRepositoriesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
